[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/entities/enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://src/entities/things/blasterA.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/entities/base_entity/BaseEntity.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ai/EnemyBehavior.tscn" type="PackedScene" id=4]

[sub_resource type="SphereMesh" id=1]
radius = 0.5
height = 1.0

[sub_resource type="SpatialMaterial" id=2]
params_specular_mode = 1
albedo_color = Color( 0.388235, 0.101961, 0.0392157, 1 )
metallic_specular = 0.11
roughness = 0.07

[sub_resource type="SphereShape" id=3]
radius = 0.5

[sub_resource type="PrismMesh" id=4]
size = Vector3( 0.1, 0.2, 0.2 )

[sub_resource type="CylinderShape" id=5]
radius = 5.0
height = 0.1

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Body" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Nose" type="MeshInstance" parent="."]
transform = Transform( -1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 9.68575e-08, 5.01202e-08, -0.586488 )
mesh = SubResource( 4 )
material/0 = null

[node name="GunMount" type="Spatial" parent="."]
transform = Transform( -1, 0, -0.000192078, 0, 1, 0, 0.000192078, 0, -1, 0, 0, -0.676675 )

[node name="blasterA" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -0.000192078, 0, 1, 0, 0.000192078, 0, -1, -0.000107216, 0, -0.55819 )

[node name="BaseEntity" parent="." instance=ExtResource( 3 )]

[node name="EnemyBehavior" parent="." instance=ExtResource( 4 )]
agent_path = NodePath("..")

[node name="Sensor" type="Area" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Sensor"]
shape = SubResource( 5 )

[connection signal="death_occurred" from="BaseEntity" to="." method="_on_BaseEntity_death_occurred"]
[connection signal="took_damange" from="BaseEntity" to="." method="_on_BaseEntity_took_damange"]
